# magda

./: CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
api/: Cargo.toml
api/src/: lib.rs
desktop/: Cargo.toml  Dioxus.toml
desktop/assets/: icon.icns  main.css
desktop/src/: cassandra.rs  config.rs  cql_tokenizer.rs  error.rs  lib.rs  main.rs  state.rs
desktop/src/components/: code_editor.rs  connection_dialog.rs  console_panel.rs  data_grid.rs  mod.rs  query_editor.rs  schema_viewer.rs  sidebar.rs  statusbar.rs  variables_panel.rs  workspace.rs
desktop/src/connection/: manager.rs  mod.rs  pool.rs
docs/plans/: 2026-02-19-csv-export-saved-queries-design.md
scripts/: init-cassandra.cql
