[package]
name = "magda-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Magda Contributors"]
description = "Modern desktop client for Apache Cassandra"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/magda"

[dependencies]
# UI Framework
dioxus = { workspace = true, features = ["desktop", "router"] }
ui = { workspace = true }

# Cassandra driver
cdrs-tokio = { version = "8.1", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
directories = "5.0"
toml = "0.8"

# Native dialogs
rfd = "0.15"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
